# segment-displays-rs

./: Cargo.toml  README.md
display-3461bs/: Cargo.toml  README.md
display-3461bs/examples/rp2040-embassy/: Cargo.toml  README.md
display-3461bs/examples/rp2040-embassy/src/: main.rs
display-3461bs/src/: lib.rs
display-5161bs/: Cargo.toml  LICENSE  README.md
display-5161bs/examples/rp2040-embassy/: Cargo.toml  Embed.toml  README.md
display-5161bs/examples/rp2040-embassy/src/: main.rs
display-5161bs/src/: lib.rs
display-shared/: Cargo.toml  README.md
display-shared/src/: lib.rs
