[package]
name = "display-3461bs"
description = "Rust driver for the 4-Digit 7-Segment Display 3461BS"

version = "0.1.0"
edition = "2021"
authors = ["Augusto César <me@augustocesar.se>"]
repository = "https://github.com/augustoccesar/segment-displays-rs"
readme = "README.md"
license = "MIT"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["embedded-hal-driver", "3461BS"]

[dependencies]
embedded-hal = "1"

display-shared = { path = "../display-shared" }
