[package]
name = "display-shared"
description = "Internal package used by display-3461bs and display-5161bs"
version = "0.1.0"
edition = "2021"

authors = ["Augusto César <me@augustocesar.se>"]
repository = "https://github.com/augustoccesar/segment-displays-rs"
license = "MIT"

[dependencies]
embedded-hal = "1"
